--- a/package.json
+++ b/package.json
@@ -1,30 +1,29 @@
 {
-    "name": "darcula-theme-for-elixir",
-    "displayName": "Darcula theme for Elixir",
-    "description": "Darcula theme adapted for Elixir language",
+    "name": "darker-than-darcula-elixir-theme",
+    "displayName": "Darker than Darcula elixir theme",
+    "description": "Less contrast fork of Darcula theme",
     "version": "0.0.1",
-    "publisher": "Arsen",
+    "publisher": "VitorTrin",
     "engines": {
         "vscode": "^1.19.0"
     },
     "categories": [
         "Themes"
     ],
-    "icon": "images/icon.png",
     "galleryBanner": {
         "color": "#C80000",
         "theme": "dark"
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/arsssen/vscode-darcula-theme-elixir"
+        "url": "https://github.com/VitorTrin/vscode-darker-than-darcula"
     },
     "contributes": {
         "themes": [
             {
-                "label": "Darcula theme for Elixir",
+                "label": "Darker than Darcula elixir theme",
                 "uiTheme": "vs-dark",
-                "path": "./themes/Darcula theme for Elixir-color-theme.json"
+                "path": "./themes/Darker than Darcula-color-theme.json"
             }
         ]
     }
